@@ -6,6 +6,8 @@ Version 1.8.6
 - BUG: Issue #621: Export Log Cache did not
        export to the expected path. (Sup Yut Sum)
 - BUG: Issue #620: merge message truncates url. (Stefan)
+- BUG: Issue #622: generated merge message contains
+       too many entries. (Stefan)
 
 Version 1.8.5
 - BUG: Issue #594: "Diff with url" generated
